--- a/src/components/globals/Footer.astro
+++ b/src/components/globals/Footer.astro
@@ -3,7 +3,7 @@
 ---
 
 <footer class="footer">
-    <div class="container">
+    <div class="container relative">
         <div class="top-footer">
             <img src="/images/ready-build-world.png" alt="logo" class="">
         </div>
@@ -37,6 +37,12 @@
                     </li>
                 </ul>
             </div>
+            <div class="col-span-2 copyright">
+                <p class="text-black font-text text-sm font-light mt-11">© 2025. All rights rerserved</p>
+            </div>
+        </div>
+        <div class="sharp-box sharp-nitendo-console">
+            <img src="/images/nintendo.png" alt="nitendo console">
         </div>
     </div>
 </footer>
