--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,9 +17,18 @@ import WorldWork from '../components/sections/worldWork.astro';
                
             </div>
             <div class="mt-16 relative">
-                <div class="box-content absolute top-0 left-0 max-w-[365px] p-[21px] px-[30px] pb-[29px] bg-[#BADF01] rounded-[16px] min-h-[143px] flex flex-col justify-between">
+                <div class="box-content absolute top-[90px] left-12 max-w-[365px] p-[21px] px-[30px] pb-[29px] bg-[#BADF01] rounded-[16px] min-h-[143px] flex flex-col justify-between">
                     <p class="text-black text-sm leading-6 font-light font-text">We are a gaming development studio creating branded worlds and interactive experiences for the next generation.</p>
                     <a href="/about-us" class="btn-arrow font-inter font-semibold text-sm text-black">→ More About Us</a>
+                    <div class="sharp-box sharp-thunder">
+                        <img src="/images/sharp-light.svg" alt="sharp box">
+                    </div>
+                    <div class="sharp-box sharp-x">
+                        <img src="/images/sharp-x.svg" alt="sharp box">
+                    </div>
+                    <div class="sharp-box sharp-heart">
+                        <img src="/images/sharp-heart.svg" alt="sharp box">
+                    </div>
                 </div>
                 <div class="box-img text-right ">
                     <img src="/images/console-neon.png" alt="console neon" class="ml-auto">
@@ -77,10 +86,10 @@ import WorldWork from '../components/sections/worldWork.astro';
     <section class="hubert-s4">
         <div class="container">
             <div class="flex">
-                <div class="max-w-[584px]">
+                <div class="max-w-[584px]" data-animation="fade-right">
                     <img src="/images/console-neon-1.png" alt="console neon">
                 </div>
-                <div class="flex-1">
+                <div class="flex-1" data-animation="fade-left">
                     <h3 class="heading-title font-sans text-white text-[50px] leading-none">
                         Our work is guided by four principles that keep it <span class="text-[#BADF01]">playful</span>, <span class="text-[#BADF01]">purposeful</span>, and <span class="text-[#BADF01]">powerful</span>
                     </h3>
@@ -141,13 +150,16 @@ import WorldWork from '../components/sections/worldWork.astro';
 
     <section class="hubert-project py-[200px]">
         <div class="container max-w-[1142px]">
-            <div class="block-heading">
+            <div class="block-heading relative z-10" data-animation="fadeIn-up">
                 <h3 class="text-[70px] leading-none font-book text-white border-b border-[#373737] pb-3 mb-3">PROJECTS</h3>
                 <p class="sub-heading max-w-[485px] text-white text-sm leading-6 font-light font-text">
                     Lorem ipsum dolor sit amet, elit sed do eiusmod, tempor incididunt veritatis consectetur adipiscing. Doloremque laudantium.
                 </p>
+                <div class="sharp-box sharp-game-cartridge">
+                    <img src="/images/game-cartridge.png" alt="game cartridge">
+                </div>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 mt-7">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 mt-7" data-animation="fadeIn-up">
                 <div class="card-item col-span-1">
                     <div class="card-img">
                         <a href="#" class="block before:block relative before:content-[''] before:pt-[61%]">
@@ -213,12 +225,12 @@ import WorldWork from '../components/sections/worldWork.astro';
            
             <div class="grid grid-cols-12 md:grid-cols-12 lg:grid-cols-12 gap-3 mt-7">
                 <div class="col-span-5">
-                    <div class="block-heading">
+                    <div class="block-heading"  data-animation="fade-right">
                         <h3 class="text-[70px] leading-none font-book text-white">TESTIMONIALS</h3>
                     </div>
                 </div>
                 <div class="col-span-7">
-                    <div class="testimonial-slide owl-carousel">
+                    <div class="testimonial-slide owl-carousel" data-animation="fade-left">
                         <div class="testimonial-item">
                             <div class="testimonial-heading">
                                 <h4>
