--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ const { title } = Astro.props;
 		<link href="./css/fonts.css" rel="stylesheet" />
 		<link href="./css/fancybox.css" rel="stylesheet" />
 		<link href="./css/owl.carousel.css" rel="stylesheet" />
+		<link href="./vendor/aos/aos.css" rel="stylesheet" />
 		<link href="./css/select2.min.css" rel="stylesheet" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,6 +36,7 @@ const { title } = Astro.props;
 		<script is:inline src="./js/jquery.js"></script>
 		<script is:inline src="./js/fancybox.js"></script>
 		<script is:inline src="./js/owl.carousel.js"></script>
+		<script is:inline src="./vendor/aos/aos.js"></script>
 		<script is:inline src="./js/main.js"></script>
 		
 </html>
