--- a/src/styles/components/_worldWork.scss
+++ b/src/styles/components/_worldWork.scss
@@ -1,5 +1,5 @@
 .world-work {
-    // height: calc(var(--vh, 1vh) * 100);
+    min-height: calc(var(--vh, 1vh) * 100);
     position: relative;
     overflow: hidden;
     .inside {
