--- a/src/styles/global/_footer.scss
+++ b/src/styles/global/_footer.scss
@@ -7,6 +7,9 @@
         border-bottom: 1px solid #fff;
         padding-bottom: 10px;
         width: 100%;
+        img {
+            max-width: 70%;
+        }
     }
     .bottom-footer {
         max-width: 840px;
