--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,32 +36,47 @@ import WorldWork from '../components/sections/worldWork.astro';
             </div>
         </div>
     </section>
-    <section class="pt-28 pb-16 abt-quote">
+    <section class="pt-28 pb-16 abt-quote flex items-center justify-center">
         <div class="container">
-            <div class="grid grid-cols-1 text-center font-anton text-[128px] gap-9 leading-none">
+            <div class="grid grid-cols-1 text-center font-anton text-[120px] gap-6 leading-none">
                 <div class="col-span-1">
-                    <h3 class="text-white">
-                        IDEATE
+                    <h3 class="text-white abt-quote-title">
+                        <span class="text">IDEATE</span>
+                        <span class="sharp sharp-ideate">
+                            <img src="/images/title/ideate.png" alt="ideate">
+                        </span>
                     </h3>
                 </div>
                 <div class="col-span-1">
-                    <h3 class="text-white">
-                        CREATE
+                    <h3 class="text-white abt-quote-title">
+                        <span class="text">CREATE</span>
+                        <span class="sharp sharp-create">
+                            <img src="/images/title/create.png" alt="create">
+                        </span>
                     </h3>
                 </div>
                 <div class="col-span-1">
-                    <h3 class="text-white">
-                        PROTOTYPE
+                    <h3 class="text-white abt-quote-title">
+                        <span class="text">PROTOTYPE</span>
+                        <span class="sharp sharp-prototype">
+                            <img src="/images/title/prototype.png" alt="prototype">
+                        </span>
                     </h3>
                 </div>
                 <div class="col-span-1">
-                    <h3 class="text-white">
-                        PLAY
+                    <h3 class="text-white abt-quote-title">
+                        <span class="text">PLAY</span>
+                        <span class="sharp sharp-play">
+                            <img src="/images/title/play.png" alt="play">
+                        </span>
                     </h3>
                 </div>
                 <div class="col-span-1">
-                    <h3 class="text-white">
-                        DO IT AGAIN
+                    <h3 class="text-white abt-quote-title">
+                        <span class="text">DO IT AGAIN</span>
+                        <span class="sharp sharp-do-it-again">
+                            <img src="/images/title/do-it-again.png" alt="do it again">
+                        </span>
                     </h3>
                 </div>
             </div>
