--- a/src/components/globals/Footer.astro
+++ b/src/components/globals/Footer.astro
@@ -7,7 +7,7 @@
         <div class="top-footer">
             <img src="/images/ready-build-world.png" alt="logo" class="">
         </div>
-        <div class="bottom-footer grid grid-cols-3 w-full">
+        <div class="bottom-footer grid lg:grid-cols-2 xl:grid-cols-3 grid-cols-1 w-full">
             <div class="col-span-1">
                 <h3 class="font-text tracking-[4px] text-black mb-5">OFFICE</h3>
                 <p class="text-black font-text text-sm">9B Phung Khac Khoan<br>
@@ -16,7 +16,7 @@
             </div>
             <div class="col-span-2">
                 <h3 class="font-text tracking-[4px] text-black mb-5">LINKS</h3>
-                <ul class="grid grid-cols-3 gap-x-3 gap-y-1 bottom-menu">
+                <ul class="grid grid-cols-2 xl:grid-cols-3 gap-x-3 gap-y-1 bottom-menu">
                     <li class="col-span-1">
                         <a href="/">Contact</a>
                     </li>
