--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import WorldWork from '../components/sections/worldWork.astro';
     <WorldWork />
     <section class="border-t-[#BADF01] border-t-[20px] hubert-about-us pt-20 pb-16 bg-white">
         <div class="container relative z-10">
-            <div class="grid grid-cols-1 text-5xl font-bold text-white gap-2">
+            <div class="grid grid-cols-1 xl:text-5xl text-3xl font-bold text-white gap-2">
                 <div class="col-span-1 text-right">
                     <p class="animate-text-about-us"> Born from the love of gaming, powered by </p>
                 </div>
@@ -36,9 +36,9 @@ import WorldWork from '../components/sections/worldWork.astro';
             </div>
         </div>
     </section>
-    <section class="pt-28 pb-16 abt-quote flex items-center justify-center">
+    <section class="md:pt-28 md:pb-16 py-24 abt-quote flex items-center justify-center">
         <div class="container">
-            <div class="grid grid-cols-1 text-center font-anton text-[120px] gap-6 leading-none">
+            <div class="grid grid-cols-1 text-center font-anton xxl:text-[120px]  xl:text-[100px] lg:text-[80px] md:text-[60px] text-[50px] gap-6 leading-none">
                 <div class="col-span-1">
                     <h3 class="text-white abt-quote-title">
                         <span class="text">IDEATE</span>
@@ -80,16 +80,16 @@ import WorldWork from '../components/sections/worldWork.astro';
                     </h3>
                 </div>
             </div>
-            <div class="flex gap-8 justify-center mt-20 abt-quote-sub">
-               <div class="max-w-[260px]">
+            <div class="md:flex text-center md:text-left grid grid-cols-1 md:gap-8 gap-4 justify-center mt-20 abt-quote-sub">
+               <div class="md:max-w-[260px] col-span-1">
                     <p class="text-sm leading-6 font-light font-text text-white">
                         Lorem ipsum dolor sit amet, elit sed do eiusmod, tempor incididunt veritatis.
                     </p>
                </div>
-               <div class="max-w-[80px]">
-                    <img src="/images/smile-icon.svg" alt="smile icon">
+               <div class="md:max-w-[80px] col-span-1">
+                    <img src="/images/smile-icon.svg" alt="smile icon" class="mx-auto md:mx-0">
                </div>
-               <div class="max-w-[250px] w-full">
+               <div class="md:max-w-[250px] w-full col-span-1">
                     <a href="#" class="btn btn-default btn-full">
                         See our work
                     </a>
@@ -100,9 +100,9 @@ import WorldWork from '../components/sections/worldWork.astro';
     </section>
     <section class="hubert-s4">
         <div class="container">
-            <div class="flex">
-                <div class="max-w-[584px]" data-animation="fade-right">
-                    <img src="/images/console-neon-1.png" alt="console neon">
+            <div class="flex lg:flex-nowrap flex-wrap">
+                <div class="lg:max-w-[584px] w-full text-center lg:text-left" data-animation="fade-right">
+                    <img src="/images/console-neon-1.png" alt="console neon" class="mx-auto lg:mx-0 lg:max-w-full max-w-[80%]">
                 </div>
                 <div class="flex-1" data-animation="fade-left">
                     <h3 class="heading-title font-sans text-white text-[50px] leading-none">
@@ -163,14 +163,14 @@ import WorldWork from '../components/sections/worldWork.astro';
         </div>
     </section>
 
-    <section class="hubert-project py-[200px]">
+    <section class="hubert-project lg:py-[200px] py-10">
         <div class="container max-w-[1142px]">
             <div class="block-heading relative z-10" data-animation="fadeIn-up">
-                <h3 class="text-[70px] leading-none font-book text-white border-b border-[#373737] pb-3 mb-3">PROJECTS</h3>
+                <h3 class="md:text-[70px] text-[40px] leading-none font-book text-white border-b border-[#373737] pb-3 mb-3">PROJECTS</h3>
                 <p class="sub-heading max-w-[485px] text-white text-sm leading-6 font-light font-text">
                     Lorem ipsum dolor sit amet, elit sed do eiusmod, tempor incididunt veritatis consectetur adipiscing. Doloremque laudantium.
                 </p>
-                <div class="sharp-box sharp-game-cartridge">
+                <div class="sharp-box sharp-game-cartridge lg:block hidden">
                     <img src="/images/game-cartridge.png" alt="game cartridge">
                 </div>
             </div>
@@ -235,16 +235,16 @@ import WorldWork from '../components/sections/worldWork.astro';
             </div>
         </div>
     </section>
-    <section class="hubert-s5 py-36 bg-section">
+    <section class="hubert-s5 lg:py-36 py-10 bg-section">
         <div class="container max-w-[1142px]">
            
             <div class="grid grid-cols-12 md:grid-cols-12 lg:grid-cols-12 gap-3 mt-7">
-                <div class="col-span-5">
+                <div class="lg:col-span-5 col-span-12">
                     <div class="block-heading"  data-animation="fade-right">
-                        <h3 class="text-[70px] leading-none font-book text-white">TESTIMONIALS</h3>
+                        <h3 class="lg:text-[70px] text-[40px] leading-none font-book text-white">TESTIMONIALS</h3>
                     </div>
                 </div>
-                <div class="col-span-7">
+                <div class="lg:col-span-7 col-span-12">
                     <div class="testimonial-slide owl-carousel" data-animation="fade-left">
                         <div class="testimonial-item">
                             <div class="testimonial-heading">
