--- a/src/styles/global/_header.scss
+++ b/src/styles/global/_header.scss
@@ -1,5 +1,37 @@
 .header {
     .navigation {
+        @media(max-width: 1023px) {
+            pointer-events: none;
+            transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
+            &.active {
+                opacity: 1;
+                visibility: visible;
+            }
+            &:after {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.9);
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
+            }
+            li {
+                
+            }
+        }
         .navigation-item {
            > a.navigation-link {
                 &:after {
@@ -20,7 +52,65 @@
                         width: 40px;
                     }
                 }
+                @media(max-width: 1023px) {
+                    font-size: 30px;
+                }
            }
+        }
+    }
+    .hammer-menu {
+        position: relative;
+        width: 30px;
+        height: 20px;
+        padding: 0;
+        cursor: pointer;
+        z-index: 2;
+        span {
+            display: block;
+            position: absolute;
+            height: 3px;
+            width: 100%;
+            background: #ffffff;
+            opacity: 1;
+            left: 0;
+            transform: rotate(0deg);
+            transition: .25s ease-in-out;
+            max-width: 25px;
+            &:nth-child(1) {
+                top: 0px;
+            }
+            
+            &:nth-child(2) {
+                top: 8px;
+                left: 7px;
+            }
+            
+            &:nth-child(3) {
+                top: 16px;
+            }
+        }
+        
+        &.active {
+            span {
+                &:nth-child(1) {
+                    top: 10px;
+                    transform: rotate(135deg);
+                }
+                
+                &:nth-child(2) {
+                    opacity: 0;
+                    left: -20px;
+                }
+                
+                &:nth-child(3) {
+                    top: 10px;
+                    transform: rotate(-135deg);
+                }
+            }
+        }
+
+        .header--not-top & span {
+            background: var(--color-body);
         }
     }
 }
