--- a/src/components/sections/worldWork.astro
+++ b/src/components/sections/worldWork.astro
@@ -14,8 +14,8 @@
             <div class="md:col-span-2 col-span-4">
                 <p>We create <span>special</span>, <span>stories</span>, and <span>worlds</span> that turn <span>brands</span> into <span>experiences</span> and <span>culture</span>. <br/>Built to be played.</p>
             </div>
-            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-none border-t border-[#2D2E2E]">See Our Work <span class="icon-arrow-up text-xl ml-auto"></span></a>
-            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-none border-t border-[#2D2E2E]">Our Services <span class="icon-arrow-up text-xl ml-auto"></span></a>
+            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-t-[transparent] border-t border-[#2D2E2E]">See Our Work <span class="icon-arrow-up text-xl ml-auto"></span></a>
+            <a href="#" target="_blank" class="md:col-span-1 sm:col-span-2 col-span-4 flex gap-2 leading-none md:border-t-[transparent] border-t border-[#2D2E2E]">Our Services <span class="icon-arrow-up text-xl ml-auto"></span></a>
         </div>
     </div>
     <!-- <div class="reveal-overlay"></div>  -->
