--- a/src/pages/up-coming.astro
+++ b/src/pages/up-coming.astro
@@ -24,4 +24,4 @@ import Layout from '../layouts/LayoutUpComing.astro';
 <script src="./vendor/gsap/scrollSmoother.min.js" defer></script>
 <script src="./vendor/gsap/ScrollTrigger.min.js" defer></script>
 <script src="./vendor/gsap/ScrollToPlugin.min.js" defer></script>
-<script src="./js/pages/homepage.js" defer></script>
+<script src="./js/pages/upComing.js" defer></script>
