--- a/src/styles/global/_footer.scss
+++ b/src/styles/global/_footer.scss
@@ -15,6 +15,29 @@
         border-bottom: 1px solid #fff;
         padding-bottom: 10px;
         width: 100%;
+        position: relative;
+        &:after {
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-image: url('/images/ready-build-world.png');
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-repeat: no-repeat;
+            cursor: pointer;
+        }
+        &:hover {
+            &:after {
+                background-image: url('/images/ready-build-world-hover.png');
+            }
+        }
+        &:before {
+            display: block;
+           padding-top: 27.231%;
+            content: '';
+        }
         img {
             max-width: 70%;
         }
