--- a/src/components/globals/Header.astro
+++ b/src/components/globals/Header.astro
@@ -25,7 +25,7 @@ const { pathname } = Astro.url;
 ---
 
 
-<header class="header fixed top-0 left-0 right-0 z-50 bg-black py-7 border-b-[4px] border-[#BADF01]">
+<header class="header lg:relative fixed top-0 left-0 right-0 z-50 bg-black py-7 border-b-[4px] border-[#BADF01]">
     <div class="container">
         <div class="flex items-center justify-between">
             <a href="/" class="text-white text-2xl font-bold">
