--- a/src/components/sections/worldWork.astro
+++ b/src/components/sections/worldWork.astro
@@ -1,4 +1,4 @@
-<section class="world-work  pb-12">
+<section class="world-work lg:pt-[140px] pt-[100px] pb-12">
     <div class="inside">
         <div class="world-world-horizontal">
             <img src="/images/title/worlds-work.png" alt="World Work">
