--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,9 @@ section {
     background: linear-gradient(0deg, #4F5963 0%, #080809 100%), linear-gradient(0deg, #000 0%, #000 100%);
 
 }
+* {
+    box-sizing: border-box;
+}
 .hubert-about-us {
     position: relative;
     &::before {
