--- a/src/styles/components/_worldWork.scss
+++ b/src/styles/components/_worldWork.scss
@@ -39,7 +39,7 @@
         height: 637px;
         width: 100%;
         max-width: 1332px;
-        margin: 137px auto 0;
+        margin: 0 auto 0;
         background-image: url('/images/rectangle.svg');
         background-position: center;
         background-repeat: no-repeat;
@@ -47,7 +47,7 @@
     }
     .world-world-horizontal {
         position: absolute;
-        top: calc(50% - 96px/2);
+        top: calc(50% - 40px/2);
         left: 0px;
         width: 100%;
         transform: translateY(-50%);
