--- a/src/components/sections/worldWork.astro
+++ b/src/components/sections/worldWork.astro
@@ -1,5 +1,5 @@
-<section class="world-work lg:pt-[140px] pt-[100px] pb-12">
-    <div class="inside">
+<section class="world-work lg:pt-[140px] pt-[100px] pb-12 flex flex-col">
+    <div class="inside mb-5">
         <div class="world-world-horizontal">
             <img src="/images/title/worlds-work.png" alt="World Work">
         </div>
@@ -9,7 +9,7 @@
             <canvas id="sequence-canvas"></canvas>
         </div>
     </div>
-    <div class="container mt-5">
+    <div class="container mt-auto">
         <div class="grid grid-cols-4 text-[28px] text-white [&_span]:text-[#BADF01] [&>*]:px-6 [&>*]:py-8 border border-[#2D2E2E] [&>*]:border-r-[#2D2E2E] [&>*]:border-r [&>*:last-child]:border-r-0 [&>a:hover]:text-[#000] [&>a:hover]:bg-[#BADF01] [&>a]:transition-all [&>a]:duration-300 [&>a:hover>span]:text-[#fff] [&>*]:items-center">
             <div class="md:col-span-2 col-span-4">
                 <p>We create <span>special</span>, <span>stories</span>, and <span>worlds</span> that turn <span>brands</span> into <span>experiences</span> and <span>culture</span>. <br/>Built to be played.</p>
