--- a/src/styles/components/_worldWork.scss
+++ b/src/styles/components/_worldWork.scss
@@ -10,10 +10,9 @@
             aspect-ratio: 1 / 1;
             margin: 0 auto;
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             &::before {
                 content: '';
                 position: absolute;
@@ -55,6 +54,7 @@
             width: auto;
             height: 65vh;
             max-width: fit-content;
+            max-height: 700px
         }
     }
 }
