--- a/src/styles/global/_footer.scss
+++ b/src/styles/global/_footer.scss
@@ -16,27 +16,35 @@
         padding-bottom: 10px;
         width: 100%;
         position: relative;
+        cursor: pointer;
         &:after {
             display: block;
             width: 100%;
             height: 100%;
-            background-image: url('/images/ready-build-world.png');
             content: '';
             position: absolute;
             top: 0;
             left: 0;
-            background-repeat: no-repeat;
-            cursor: pointer;
         }
-        &:hover {
-            &:after {
-                background-image: url('/images/ready-build-world-hover.png');
-            }
+        &:after {
+            background-image: url('/images/ready-build-world.png');
+            background-repeat: no-repeat;
         }
         &:before {
+            background-image: url('/images/ready-build-world-hover.png');
+            background-repeat: no-repeat;
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+            z-index: 1;
             display: block;
-           padding-top: 27.231%;
             content: '';
+            padding-top: 27.231%;
+            position: relative;
+        }
+        &:hover {
+            &:before {
+                opacity: 1;
+            }
         }
         img {
             max-width: 70%;
