--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,9 +17,9 @@ import WorldWork from '../components/sections/worldWork.astro';
                
             </div>
             <div class="mt-16 relative">
-                <div class="box-content absolute top-[90px] left-12 max-w-[365px] p-[21px] px-[30px] pb-[29px] bg-[#BADF01] rounded-[16px] min-h-[143px] flex flex-col justify-between"  data-animation="fade-up" data-delay="0.4">
+                <div class="box-content absolute top-[90px] left-12 max-w-[365px] p-[21px] px-[30px] pb-[29px] bg-[#BADF01] rounded-[16px] min-h-[143px] flex flex-col justify-between z-10"  data-animation="fade-up" data-delay="0.4">
                     <p class="text-black text-sm leading-6 font-light font-text">We are a gaming development studio creating branded worlds and interactive experiences for the next generation.</p>
-                    <a href="/about-us" class="btn-arrow font-inter font-semibold text-sm text-black">→ More About Us</a>
+                    <a href="/about-us" class="btn-arrow font-inter font-semibold text-sm text-black mt-[62px]">→ More About Us</a>
                     <div class="sharp-box sharp-thunder">
                         <img src="/images/sharp-light.svg" alt="sharp box">
                     </div>
@@ -85,7 +85,8 @@ import WorldWork from '../components/sections/worldWork.astro';
             <div class="md:flex text-center md:text-left grid grid-cols-1 md:gap-8 gap-4 justify-center mt-20 abt-quote-sub">
                <div class="md:max-w-[260px] col-span-1">
                     <p class="text-sm leading-6 font-light font-text text-white">
-                        Lorem ipsum dolor sit amet, elit sed do eiusmod, tempor incididunt veritatis.
+                        This is our process. <br/>
+                        Now see what it looks like in action.
                     </p>
                </div>
                <div class="md:max-w-[80px] col-span-1">
