--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,7 +32,7 @@ section {
 
 }
 * {
-    box-sizing: border-box;
+    box-sizing: border-box !important;
 }
 .hubert-about-us {
     position: relative;
@@ -144,8 +144,12 @@ section {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 100px 0;
+    padding: 170px 0;
     background-attachment: fixed;
+    min-height: calc(var(--vh, 1vh) * 100);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     .heading-title {
         font-family: 'HelveticaNowDisplay', sans-serif;
         font-size: 50px;
@@ -177,20 +181,37 @@ section {
             @for $i from 1 through 9 {
                 &:nth-child(#{$i}) {
                     &:before {
-                        content: '0' + $i;
-                        color: #BADF01;
-                        font-family: 'SharpGroteskPE', sans-serif;
-                        font-size: 92.08px;
-                        text-decoration: underline;
-                        line-height: 100%; /* 25px */
-                        font-weight: 400;
-                        font-style: italic;
-                        line-height: 100%;
-                        line-height: 0.8;
+                        content: '';
+                        background-image: url('/images/0' + $i + '.svg');
+                        background-size: contain;
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        width: 100px;
+                        height: 100px;
+                        display: block;
                         @media (max-width: 768px) {
                             font-size: 60px;
                         }
                     }
+                }
+            }
+            &:nth-child(1) {
+                &:before {
+                   flex: 0 0 50px;
+                   max-width: 50px;
+                }
+            }
+            &:nth-child(2), 
+            &:nth-child(3) { 
+                &:before {
+                   flex: 0 0 60px;
+                   max-width: 60px;
+                }
+            }
+            &:nth-child(4) { 
+                &:before {
+                   flex: 0 0 59px;
+                   max-width: 59px;
                 }
             }
             h4 {
