--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import './global/footer.scss';
 @import './components/worldWork.scss';
 @import './components/testimonial.scss';
-
+@import './components/career.scss';
 body {
     background-color: #000;
     font-family: 'HelveticaNowDisplay', sans-serif;
@@ -26,6 +26,11 @@ section {
     position: relative;
     z-index: 2;
     background-color: #000;
+}
+.no-backdrop {
+    .fancybox__backdrop {
+        background: transparent;
+    }
 }
 .bg-section {
     background: linear-gradient(0deg, #4F5963 0%, #080809 100%), linear-gradient(0deg, #000 0%, #000 100%);
